--- a/FORNTEND/styles/globals.css
+++ b/FORNTEND/styles/globals.css
@@ -2314,6 +2314,7 @@ header.sticky {
 
 .poputegs {
   margin-top: 1rem;
+  margin-bottom: 4rem;
   position: relative;
   display: flex;
   align-items: center;
